
Changes in openair 0.5-20 [2012-02-13]
*	Use C++ code for rolling mean calcs. Much faster, more to
	follow
*	NEW function trajCluster to carry out cluster analysis on back trajectories
Changes in openair 0.5-18 [2012-01-16]
*	Update trajectory files to 2011 and add Berlin, Paris
*	Add option seg to pollutionRose to control the width of the
	segments
*	Add option start.day to timeVariation to control the order of
	weekdays.
*	Fixed bug in polarAnnulus where 360 degree winds were absent.
*	Remove dependency on zoo and proto.

Changes in openair 0.5-17 [2012-01-12]
=====================================

*	Update to [IN DEVELOPMENT] GoogleMapsPlot.
        (1 lat,lon default handling)

Changes in openair 0.5-15 [2011-12-08]
=====================================

*	Update imports etc.

Changes in openair 0.5-15 [2011-12-08]
=====================================

*       Update to [IN DEVELOPMENT] GoogleMapsPlot.
*	Tidy up calcFno2 plotting.
*	Improve speed of timeAverage by removing date.pad.
*	Add vector averaging option to timeAverage for wind speed.

Changes in openair 0.5-14 [2011-11-29]
=====================================

*       NEW FUNCTION polarCluster for undertaking k-means clustering
        of bivariate polar plots
*       Remove any considerations of time zones in selectByDate. If
        start and end are supplied, whole days based on Date format
        are used to select. Now accepts start/end in the form
        "YYYY-mm-dd" as well as UK format e.g. dd/mm/YYYY.

Changes in openair 0.5-13 [2011-11-18]
=====================================

*       Major update to polarPlot allowing variables other than
	"ws" to be plotted with wind direction.
*       Improve documentation for polarPlot/TaylorDiagram
*	Update openair citation information to Journal article

Changes in openair 0.5-12 [2011-11-14]
=====================================

*       do not clip polarPlot concentrations unless upper is supplied